--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <ProgressBar
@@ -31,68 +31,81 @@
         android:visibility="gone" />
 
     <LinearLayout
+        android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/login_form"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/image_logo"
-            android:src="@drawable/civitas_main_logo"
-            android:layout_gravity="center"
             android:layout_width="200dp"
-            android:layout_height="120dp" />
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:src="@drawable/civitas_main_logo" />
 
-        <EditText
-            android:id="@+id/edit_login_email"
-            android:hint="@string/edit_login_email"
-            android:gravity="center"
-            android:inputType="textEmailAddress"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textinput_login_email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-        <EditText
-            android:id="@+id/edit_login_password"
-            android:hint="@string/edit_login_password"
-            android:gravity="center"
-            android:inputType="textPassword"
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/edit_login_email"
+                android:inputType="textEmailAddress" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textinput_login_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:errorEnabled="true"
+            app:passwordToggleEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/edit_login_password"
+                android:inputType="textPassword" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/button_login_confirm"
-                android:text="@string/button_login_confirm"
-                android:background="@drawable/buttons"
-                android:textColor="@color/white"
-                android:layout_weight="1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/buttons"
+                android:text="@string/button_login_confirm"
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/button_login_register"
-                android:text="@string/button_login_register"
-                android:background="@drawable/buttons"
-                android:textColor="@color/white"
-                android:layout_weight="1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/buttons"
+                android:text="@string/button_login_register"
+                android:textColor="@color/white" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/text_login_reset_password"
-            android:text="@string/text_login_reset_password"
-            android:layout_marginTop="24dp"
-            android:textStyle="bold"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:clickable="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="24dp"
+            android:clickable="true"
+            android:gravity="center"
+            android:text="@string/text_login_reset_password"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
