--- a/app/src/main/res/layout/fragment_artefact_list.xml
+++ b/app/src/main/res/layout/fragment_artefact_list.xml
@@ -36,6 +36,46 @@
         android:id="@+id/form_artefact_list"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="Filter"
+                android:layout_margin="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Switch
+                android:id="@+id/switch_filter"
+                android:layout_margin="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/layout_filter"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/edit_list_filter"
+                android:hint="category or name"
+                android:layout_width="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/button_artefact_list_filter_submit"
+                android:text="apply"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
         <android.support.v7.widget.RecyclerView
             android:layout_marginTop="8dp"
             android:id="@+id/recyclerview_list_of_artefacts"
