--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -17,7 +17,7 @@
             android:title="@string/ic_drawer_artefacts" />
 
         <item
-            android:id="@+id/nav_info"
+            android:id="@+id/nav_impressum"
             android:icon="@drawable/ic_info"
             android:title="@string/ic_drawer_info" />
 
@@ -26,6 +26,7 @@
     <!--    this items will trigger an action   -->
     <item android:title="Settings">
         <menu>
+<!--
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_share"
@@ -35,6 +36,7 @@
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_send"
                 android:title="@string/ic_drawer_send" />
+-->
 
             <item
                 android:id="@+id/nav_settings"
