--- a/app/src/main/res/layout/cardview_artefact.xml
+++ b/app/src/main/res/layout/cardview_artefact.xml
@@ -67,25 +67,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
             android:orientation="horizontal">
 
             <RatingBar
                 android:id="@+id/ratingbar_artefact_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?android:attr/ratingBarStyleSmall"
+                style="?android:attr/ratingBarStyleIndicator"
+                android:theme="@style/customRatingBar"
                 android:isIndicator="true"
-                android:layout_weight="4"
                 android:clickable="false"
-                android:rating="2"
-                android:stepSize="1" />
+                android:stepSize="0.1" />
+
+           <!-- style="@style/customRatingBar"-->
 
             <TextView
                 android:id="@+id/text_rating_average"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="(4)" />
 
         </LinearLayout>
