--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,17 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="customRatingBar"
+        parent="android:style/Widget.Material.RatingBar.Small">
+        <item name="android:minHeight">16dp</item>
+        <item name="android:maxHeight">16dp</item>
+        <item name="android:scaleY">0.5</item>
+        <item name="android:scaleX">0.5</item>
+        <item name="android:max">5</item>
+        <item name="android:numStars">5</item>
+        <item name="android:rating">2</item>
+
+    </style>
+
+
 </resources>
