--- a/app/src/main/res/layout/cardview_artefact.xml
+++ b/app/src/main/res/layout/cardview_artefact.xml
@@ -67,6 +67,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <RatingBar
