--- a/app/src/main/res/layout/fragment_artefact_detail.xml
+++ b/app/src/main/res/layout/fragment_artefact_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/light_grey"
     android:orientation="vertical"
     android:layout_marginTop="8dp"
     tools:context=".MainActivity">
