--- a/app/src/main/res/layout/fragment_new_artefact.xml
+++ b/app/src/main/res/layout/fragment_new_artefact.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/light_grey"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -37,6 +37,9 @@
         <LinearLayout
             android:id="@+id/form_new_artefact"
             android:layout_width="match_parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -49,7 +52,6 @@
                     android:id="@+id/button_new_artefact_image_from_camera"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:layout_weight="1"
                     android:background="@drawable/buttons"
                     android:padding="8dp"
@@ -60,16 +62,13 @@
                     android:id="@+id/button_new_artefact_image_from_gallery"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:layout_weight="1"
                     android:background="@drawable/buttons"
                     android:padding="8dp"
                     android:src="@drawable/ic_gallery"
                     android:text="@string/button_new_artefact_image" />
 
-
             </LinearLayout>
-
 
             <ImageView
                 android:id="@+id/image_new_artefact"
@@ -79,7 +78,6 @@
                 android:layout_marginTop="16dp"
                 android:clickable="true"
                 android:src="@drawable/civitas_main_logo" />
-
 
             <EditText
                 android:id="@+id/edit_new_artefact_name"
