--- a/app/src/main/res/layout/fragment_artefact_detail.xml
+++ b/app/src/main/res/layout/fragment_artefact_detail.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="8dp"
     android:background="@color/light_grey"
     android:orientation="vertical"
-    android:layout_marginTop="8dp"
     tools:context=".MainActivity">
 
     <ProgressBar
@@ -47,28 +47,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ProgressBar
-                    android:id="@+id/progress_image_artefact_detail"
-                    style="?android:attr/progressBarStyleLarge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp" />
-
-                <ImageView
-                    android:id="@+id/image_artefact_detail"
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/civitas_main_logo" />
+                    android:layout_height="wrap_content"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardCornerRadius="8dp">
+
+                    <ProgressBar
+                        android:id="@+id/progress_image_artefact_detail"
+                        style="?android:attr/progressBarStyleLarge"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp" />
+
+                    <ImageView
+                        android:id="@+id/image_artefact_detail"
+                        android:layout_width="match_parent"
+                        android:layout_height="400dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:scaleType="fitXY" />
+
+                </android.support.v7.widget.CardView>
 
             </RelativeLayout>
 
@@ -102,47 +109,83 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="16dp"
+                android:textColor="@color/civitas_dark_grey"
                 android:text="@string/artefact_detail_name"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:visibility="gone" />
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardview_artefact_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:orientation="horizontal">
+                android:background="@color/white"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardCornerRadius="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/text_artefact_detail_author"
+                            android:layout_width="wrap_content"
+                            android:textColor="@color/civitas_dark_grey"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/artefact_detail_author" />
+
+                        <TextView
+                            android:id="@+id/text_artefact_detail_created"
+                            android:textColor="@color/civitas_dark_grey"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/artefact_detail_created" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/text_artefact_detail_category"
+                        android:layout_width="match_parent"
+                        android:textColor="@color/civitas_dark_grey"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/artefact_detail_category" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@color/white"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardCornerRadius="8dp">
 
                 <TextView
-                    android:id="@+id/text_artefact_detail_author"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/text_artefact_detail_description"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/artefact_detail_author" />
+                    android:textColor="@color/civitas_dark_grey"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:elevation="4dp"
+                    android:text="@string/artefact_detail_description" />
 
-                <TextView
-                    android:id="@+id/text_artefact_detail_created"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/artefact_detail_created" />
+            </android.support.v7.widget.CardView>
 
-            </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/text_artefact_detail_category"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/artefact_detail_category" />
-
-            <TextView
-                android:id="@+id/text_artefact_detail_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/artefact_detail_description" />
 
             <LinearLayout
                 android:id="@+id/layout_artefact_detail_audio_player"
