--- a/app/src/main/res/layout/cardview_artefact.xml
+++ b/app/src/main/res/layout/cardview_artefact.xml
@@ -37,12 +37,16 @@
 
             <ImageView
                 android:id="@+id/image_cardview_artefact"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:contentDescription="@string/artefact_image"
                 android:scaleType="fitXY"
-                android:src="@drawable/civitas_main_logo" />
-            <!--android:background="@color/civitas_dark_grey"-->
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <!--android:background="@color/civitas_dark_grey"
+                android:src="@drawable/civitas_main_logo"-->
 
 
         </android.support.constraint.ConstraintLayout>
