--- a/app/src/main/res/layout/fragment_artefact_detail.xml
+++ b/app/src/main/res/layout/fragment_artefact_detail.xml
@@ -104,16 +104,7 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/text_artefact_detail_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:textColor="@color/civitas_dark_grey"
-                android:text="@string/artefact_detail_name"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:visibility="gone" />
+
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardview_artefact_content"
@@ -127,9 +118,18 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="4dp"
+                    android:layout_margin="4dp"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/text_artefact_detail_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/civitas_dark_grey"
+                        android:text="@string/artefact_detail_name"
+                        android:layout_marginBottom="8dp"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -179,8 +179,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/civitas_dark_grey"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="4dp"
+                    android:layout_margin="4dp"
                     android:elevation="4dp"
                     android:text="@string/artefact_detail_description" />
 
