--- a/app/src/main/res/layout/fragment_artefact_detail.xml
+++ b/app/src/main/res/layout/fragment_artefact_detail.xml
@@ -105,7 +105,6 @@
             </LinearLayout>
 
 
-
             <android.support.v7.widget.CardView
                 android:id="@+id/cardview_artefact_content"
                 android:layout_width="match_parent"
@@ -125,42 +124,44 @@
                         android:id="@+id/text_artefact_detail_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/civitas_dark_grey"
-                        android:text="@string/artefact_detail_name"
                         android:layout_marginBottom="8dp"
+                        android:text="@string/artefact_detail_name"
+                        android:textColor="@color/civitas_dark_grey"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/text_artefact_detail_author"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:text="@string/artefact_detail_author"
+                        android:textColor="@color/civitas_dark_grey" />
 
-                        <TextView
-                            android:id="@+id/text_artefact_detail_author"
-                            android:layout_width="wrap_content"
-                            android:textColor="@color/civitas_dark_grey"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="@string/artefact_detail_author" />
+                    <TextView
+                        android:id="@+id/text_artefact_detail_created"
+                        android:layout_width="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/artefact_detail_created"
+                        android:textColor="@color/civitas_dark_grey" />
 
-                        <TextView
-                            android:id="@+id/text_artefact_detail_created"
-                            android:textColor="@color/civitas_dark_grey"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="@string/artefact_detail_created" />
+                    <TextView
+                        android:id="@+id/text_artefact_detail_updated"
+                        android:layout_width="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/artefact_detail_updated"
+                        android:visibility="gone"
+                        android:textColor="@color/civitas_dark_grey" />
 
-                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/text_artefact_detail_category"
                         android:layout_width="match_parent"
-                        android:textColor="@color/civitas_dark_grey"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="@string/artefact_detail_category" />
+                        android:text="@string/artefact_detail_category"
+                        android:textColor="@color/civitas_dark_grey" />
 
                 </LinearLayout>
 
@@ -178,10 +179,10 @@
                     android:id="@+id/text_artefact_detail_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/civitas_dark_grey"
                     android:layout_margin="4dp"
                     android:elevation="4dp"
-                    android:text="@string/artefact_detail_description" />
+                    android:text="@string/artefact_detail_description"
+                    android:textColor="@color/civitas_dark_grey" />
 
             </android.support.v7.widget.CardView>
 
