--- a/app/src/main/res/layout/fragment_artefact_list.xml
+++ b/app/src/main/res/layout/fragment_artefact_list.xml
@@ -68,6 +68,12 @@
                 android:layout_width="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_height="wrap_content" />
+            <Spinner
+                android:id="@+id/spinner_list_filter_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/edit_list_filter"
+                android:layout_centerVertical="true" />
 
             <Button
                 android:id="@+id/button_artefact_list_filter_submit"
