design new filter layout

--- a/app/src/main/res/menu/toolbar_menu_artefact_list.xml
+++ b/app/src/main/res/menu/toolbar_menu_artefact_list.xml
@@ -2,25 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/edit_artefact"
-        android:icon="@drawable/ic_artefact_edit"
-        android:title="Edit"
-        app:showAsAction="always" />
-
-    <item android:id="@+id/delete_artefact"
-        android:icon="@drawable/ic_artefact_delete"
-        android:title="Delete"
-        app:showAsAction="always" />
-<!--
-    <item android:id="@+id/edit_artefact"
-        android:icon="@drawable/ic_artefact_edit"
-        android:title="Edit"
-        app:showAsAction="never" />
-
-    <item android:id="@+id/delete_artefact"
-        android:icon="@drawable/ic_artefact_delete"
-        android:title="Delete"
-        app:showAsAction="never" />
--->
+    <item android:id="@+id/list_filter"
+    android:icon="@drawable/ic_filter"
+    android:title="Filter"
+    app:showAsAction="always" />
 
 </menu>
