catch annoDomini property within newArtefactFragment

--- a/app/src/main/res/layout/fragment_new_artefact.xml
+++ b/app/src/main/res/layout/fragment_new_artefact.xml
@@ -93,13 +93,38 @@
                 android:layout_marginTop="16dp"
                 android:hint="@string/hint_new_artefact_description" />
 
-            <EditText
-                android:id="@+id/et_new_artefact_date"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:hint="@string/hint_new_artefact_date"
-                android:inputType="number" />
+                android:layout_height="wrap_content">
+
+
+                <EditText
+                    android:id="@+id/et_new_artefact_date"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:hint="@string/hint_new_artefact_date"
+                    android:inputType="number"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/button_new_artefact_anno_domini"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/button_new_artefact_anno_domini"
+                    android:background="@drawable/buttons"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </android.support.constraint.ConstraintLayout>
+
 
             <Button
                 android:id="@+id/button_new_artefact_add_category"
