implement anno domini property within editArtefactFragment

--- a/app/src/main/res/layout/fragment_edit_artefact.xml
+++ b/app/src/main/res/layout/fragment_edit_artefact.xml
@@ -93,13 +93,39 @@
                 android:layout_marginTop="16dp"
                 android:hint="@string/hint_new_artefact_description" />
 
-            <EditText
-                android:id="@+id/edit_edit_artefact_age"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:hint="@string/hint_new_artefact_date"
-                android:inputType="number" />
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/edit_edit_artefact_age"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:hint="@string/hint_new_artefact_date"
+                    android:inputType="number"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/button_edit_artefact_anno_domini"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0" />
+
+                <Button
+                    android:id="@+id/button_edit_artefact_anno_domini"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/buttons"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </android.support.constraint.ConstraintLayout>
+
+
 
             <Spinner
                 android:id="@+id/spinner_edit_artefact_category"
